[package]
name = "kaelus_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.152"
serde = "1.0.152"
serde-xml-rs = "0.6.0"
chrono = "0.4.23"
csv = "1.1.6"
owo-colors = "3.5.0"
libmath = "0.2.1"
